Bump to v2.3: MySQL migration, HikariCP pooling, audit pass
- Migrated from SQLite to MySQL with HikariCP 5.1.0 connection pooling
- Added mysql-connector-j 9.2.0, slf4j 2.0.13; shaded under me.pacotaco.laby.libs.*
- Added mysql.ssl config option
- DatabaseManager: atomic unmute UPDATE, getActiveMute() delegation, try-with-resources ResultSet cleanup
- LabyMutePlugin: null-checked getCommand() results before setExecutor()
- LabyVoiceManager: null-checked LabyModProtocolService.get()
- MuteCommandHandler: showHistoryPage batches messages in one runTask; out-of-range page returns error
- TimeUtil: NumberFormatException handling and overflow guard in parseTimeStrict()
- DiscordWebhook: migrated to java.net.http.HttpClient (replaces deprecated URL.openConnection())
- notifyStaff: replaced deprecated ChatColor.stripColor() with regex strip
- maven-compiler-plugin bumped 3.8.1 -> 3.13.0
- Removed SQLite references from plugin.yml description